# hermes-health-band

./: .gitignore  README.md  SKILL.md  plugin.yaml  pyproject.toml
docs/: debugging.md
health_band/: __init__.py  tools.py
sample_data/derived/: example-heart.json  example-sleep.json  example-summary.json
scripts/: parse_gadgetbridge_summary.py  watch_gadgetbridge_sync.py
