[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-health-band"
version = "1.1.0"
description = "Hermes Agent plugin — read HUAWEI Band 8 health data via Gadgetbridge sync"
authors = [
    {name = "Asanilo"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Hermes Agent",
]

[tool.setuptools.packages.find]
include = ["health_band*"]
